CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Pipeline)

IF(NOT VTK_BINARY_DIR)
FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE(${VTK_USE_FILE})
ENDIF(NOT VTK_BINARY_DIR)

ADD_EXECUTABLE(Pipeline Pipeline.cpp)
TARGET_LINK_LIBRARIES(Pipeline vtkRendering vtkIO)